2009-05-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/AreaRenderer.java
    (drawItem): Use correct item label anchor for horizontal orientation.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeTableXYDataset.java
    (add): If period is a RegularTimePeriod, peg it to the timezone and locale
    specified in the constructor.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1937486:
    * source/org/jfree/chart/renderer/category/AreaRenderer.java
    (drawItem): Handle AreaRendererEndType.LEVEL.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeriesCollection.java: Implemented
    XYRangeInfo,
    (getRangeBounds): New method.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeries.java
    (minY): New field,
    (maxY): Likewise,
    (TimeSeries(Comparable, String, String)): Initialise new fields,
    (getMinY): New method,
    (getMaxY): Likewise,
    (add(TimeSeriesDataItem, boolean)): Update min/maxY,
    (update(RegularTimePeriod, Number)): Delegate,
    (update(int, Number)): Update bounds,
    (addOrUpdate): Update bounds,
    (removeAgedItems): Likewise,
    (clear): Clear bounds,
    (delete(RegularTimePeriod)): Update bounds,
    (delete(int, int)): Delegate to new method,
    (delete(int, int, boolean)): New method,
    (updateBoundsForAddedItem): New method,
    (updateBoundsForRemovedItem): Likewise,
    (findBoundsByIteration): Likewise,
    (minIgnoreNaN): Likewise,
    (maxIgnoreNaN): Likewise,
    * tests/org/jfree/data/time/junit/TimeSeriesTests.java
    (testDelete3): New test,
    (testDelete_RegularTimePeriod): Likewise,
    (testSetMaximumItemCount): Updated to check min/maxY,
    (testAddOrUpdate2): New method,
    (testAddOrUpdate3): Likewise,
    (testRemoveAgedItems4): Likewise,