@@ -1,0 +1,84 @@
+/* ===========================================================
+ * JFreeChart : a free chart library for the Java(tm) platform
+ * ===========================================================
+ *
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
+ *
+ * Project Info:  http://www.jfree.org/jfreechart/index.html
+ *
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
+ * (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
+ * License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
+ *
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
+ * in the United States and other countries.]
+ *
+ * -----------------------------
+ * DataFunctionPackageTests.java
+ * -----------------------------
+ * (C) Copyright 2009, by Object Refinery Limited and Contributors.
+ *
+ * Original Author:  David Gilbert (for Object Refinery Limited);
+ * Contributor(s):   -;
+ *
+ * Changes
+ * -------
+ * 28-May-2008 : Version 1 (DG);
+ *
+ */
+
+package org.jfree.data.function.junit;
+
+import junit.framework.Test;
+import junit.framework.TestCase;
+import junit.framework.TestSuite;
+
+/**
+ * Some tests for the <code>org.jfree.data.function</code> package that can
+ * be run using JUnit.  You can find more information about JUnit at
+ * <a href="http://www.junit.org">http://www.junit.org</a>.
+ */
+public class DataFunctionPackageTests extends TestCase {
+
+    /**
+     * Returns a test suite to the JUnit test runner.
+     *
+     * @return The test suite.
+     */
+    public static Test suite() {
+        TestSuite suite = new TestSuite("org.jfree.data.function");
+        suite.addTestSuite(PolynomialFunction2DTests.class);
+        return suite;
+    }
+
+    /**
+     * Constructs the test suite.
+     *
+     * @param name  the test suite name.
+     */
+    public DataFunctionPackageTests(String name) {
+        super(name);
+    }
+
+    /**
+     * Runs the test suite using JUnit's text-based runner.
+     *
+     * @param args  ignored.
+     */
+    public static void main(String[] args) {
+        junit.textui.TestRunner.run(suite());
+    }
+
+}
+
